--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inbox Detox</title>
+    <meta name="theme-color" content="#2563EB" />
+    <meta name="description" content="Nexa - Akıllı posta kutusu temizliği" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Manrope:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="/src/assets/logo-black.svg" />
+    <title>Nexa</title>
   </head>
   <body>
     <div id="root"></div>
